--- a/inscriptions/templates/admin/course_choose.html
+++ b/inscriptions/templates/admin/course_choose.html
@@ -4,9 +4,9 @@
 <h1>{% trans "Sélectionnez votre course :" %}</h1>
 <ul>
     {% for course in courses %}
-    <li><a href="/{{ course.uid }}/admin/">{{ course.nom }} {{ course.date }}</a></li>
+    <li><a href="/{{ course.uid }}/admin/">{{ course.nom }} ({{ course.date }})</a></li>
     {% endfor %}
 </ul>
 <a href="/course/inscriptions/course/add/"><span>{% trans "Créer une nouvelle course" %}</span></a><br />
-<a href="/course/join/ask"><span>{% trans "Demander à rejoindre l'équipe d'une course" %}</span></a>
+<a href="/course/ask"><span>{% trans "Demander à rejoindre l'équipe d'une course" %}</span></a>
 {% endblock %}
