--- a/inscriptions/templates/change.html
+++ b/inscriptions/templates/change.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
 
-{% block content %}
+{% block body %}
     <style>
         .container_16 .grid_11 { width: 940px; }
     </style>
