--- a/inscriptions/templates/done.html
+++ b/inscriptions/templates/done.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
 {% load l10n %}
-{% block content %}
+{% block body %}
 <h1>{% trans 'Votre inscription est enregistrée' %}</h1>
 <table>
     <tr><th>{% trans 'Equipe : ' %}</th><td>{{ instance.nom }}</td></tr>
