--- a/inscriptions/templates/list.html
+++ b/inscriptions/templates/list.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
 
-{% block content %}
+{% block body %}
     <script>
         var nbcomplet = 0;
     </script>
