--- a/inscriptions/templates/_footer.html
+++ b/inscriptions/templates/_footer.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-{% trans "&copy; 2015 &lt;your company here&gt;" %}
+<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/fr/">CC BY NC SA</a> - <a href="http://puyb.net/">Puyb</a>
