--- a/inscriptions/templates/closed.html
+++ b/inscriptions/templates/closed.html
@@ -1,7 +1,16 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
-{% block content %}
-<h1>{% trans "Le site d'inscription est fermé." %}</h1>
-<p>{% trans "S'il vous manque encore des certificats, ammenez les le jour de la course." %}</p>
-<p>{% trans "Si vous n'avez pas encore payé, ammenez votre chèque le jour de la course." %}</p>
+{% block body %}
+<div class="jumbotron">
+    <div class="media">
+        <div class="media-left">
+            <img src="{{ MEDIA_URL }}{{ COURSE.logo }}" align="left" width="200" />
+        </div>
+        <div class="media-body">
+            <h2>{% trans "Le site d'inscription est fermé." %}</h2>
+            <p>{% trans "S'il vous manque encore des certificats, ammenez les le jour de la course." %}</p>
+            <p>{% trans "Si vous n'avez pas encore payé, ammenez votre chèque le jour de la course." %}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
