--- a/inscriptions/templates/site_base.html
+++ b/inscriptions/templates/site_base.html
@@ -14,6 +14,12 @@
     {% block extra_head %}{% endblock %}
 {% endblock %}
 
+{% block site_brand %}
+<a class="navbar-brand" href="{% url "home" %}">Enduroller</a>
+{% endblock %}
+
+{% block account_bar %}
+{% endblock %}
 
 {% block footer %}
     {% include "_footer.html" %}
