--- a/inscriptions/templates/stats.html
+++ b/inscriptions/templates/stats.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
 {% load l10n %}
 {% load stats %}
 
-{% block main %}
+{% block body %}
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
