--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -15,3 +15,9 @@
 
 // Site overrides
 @import "custom.less";
+
+.equal, .equal > div[class*='col-'] {  
+    display: -webkit-flex;
+    display: flex;
+    flex: 0 0 auto;
+}
