--- a/inscriptions/templates/orga.html
+++ b/inscriptions/templates/orga.html
@@ -6,9 +6,9 @@
 {% block body %}
 <div class="jumbotron">
     <h1>Vous organisez une course ?</h1>
-    <p>Vous organisez une course d'endurence de roller par équipe et vous souhaitez vous simplifier la vie et celle de vos participant ? Vous pouvez gratuitement utiliser ce site pour gérer le sinscriptions et les paiements à votre course.</p>
-    <p>Ce site vous permet de proposer une interface simple et pratique à vos participant pour inscrire les équipes et équipiers, modifier les inscirptions si besoin, payer les inscriptions, etc...</p>
-    <p>En tant qu'organisateur, ce site va simplifier la gestion des inscriptions, des paiements, la vérification des justificatifs et certificats, les demande de modififcations d'équipes, etc...</p>
+    <p>Vous organisez une course d'endurance de roller par équipe et vous souhaitez vous simplifier la vie ainsi que celle de vos participants ? Vous pouvez gratuitement utiliser ce site pour gérer les inscriptions et les paiements à votre course.</p>
+    <p>Ce site vous permet de proposer une interface simple et pratique à vos participants pour inscrire les équipes et équipiers, modifier les inscriptions si besoin, payer les inscriptions, etc...</p>
+    <p>En tant qu'organisateur, ce site va simplifier la gestion des inscriptions, des paiements, la vérification des justificatifs et certificats, les demande de modifications d'équipes, etc...</p>
 </div>
 <div class="row equal">
     <div class="col-md-6">
