--- a/inscriptions/templates/admin/course_choose.html
+++ b/inscriptions/templates/admin/course_choose.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}
+{% extends "admin/base_site_common.html" %}
 {% load i18n %}
 {% block content %}
 <h1>{% trans "Sélectionnez votre course :" %}</h1>
