--- a/inscriptions/templates/admin/course_create.html
+++ b/inscriptions/templates/admin/course_create.html
@@ -1,6 +1,12 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
 
+{% block title %}{% blocktrans %}Enduroller{% endblocktrans %}{% endblock %}
+
+{% block branding %}
+<h1 id="site-name">{% blocktrans %}Enduroller - Création d'une nouvelle course{% endblocktrans %}</h1>
+{% endblock %}
+
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
