fix prices when error in course creation

--- a/static/src/less/admin.less
+++ b/static/src/less/admin.less
@@ -17,3 +17,11 @@
     font-size: 12px;
     color: black;
 }
+
+.aligned .field-course_model ul {
+    display: inline-block;
+    margin: 0;
+}
+.aligned .field-course_model ul li {
+    list-style: none;
+}
