--- a/inscriptions/templates/admin/base_site.html
+++ b/inscriptions/templates/admin/base_site.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block userlinks %}
-    <a href="/course/choose/">{% blocktrans %}Changer de course{% endblocktrans %}</a>
+    <a href="/course/choose/">{% blocktrans %}Changer de course{% endblocktrans %}</a> /
     <script src="{{ STATIC_URL }}/admin/js/jquery.js"></script>
     <script src="{{ STATIC_URL }}/admin.js"></script>
     {% include "admin/_scripts.html" %}
