--- a/inscriptions/templates/admin/inscriptions/course/change_form.html
+++ b/inscriptions/templates/admin/inscriptions/course/change_form.html
@@ -1,17 +1,24 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
 
-{% block title %}{% blocktrans %}Enduroller{% endblocktrans %}{% endblock %}
+{% block title %}{% if add %}{% blocktrans %}Enduroller{% endblocktrans %}{% else %}{{ block.super }{% endif %}{% endblock %}
 
 {% block branding %}
+{% if add %}
 <h1 id="site-name">{% blocktrans %}Enduroller - Création d'une nouvelle course{% endblocktrans %}</h1>
+{% else %}{{ block.super }}{% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
+{% if add %}
 <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
     &rsaquo; {% trans 'Ajouter nouvelle course' %}
 </div>
+{% else %}{{ block.super }}{% endif %}
 {% endblock %}
 
-
+{% block content %}
+    {{ adminForm.errors }
+    {{ block.super }}
+{% endblock %}
