--- a/inscriptions/templates/admin/inscriptions/course/change_form.html
+++ b/inscriptions/templates/admin/inscriptions/course/change_form.html
@@ -19,6 +19,8 @@
 {% endblock %}
 
 {% block content %}
-    {{ adminForm.errors }
+    {% for k, v in adminForm.errors.items %}
+      {{ k }}: {{ v|join:", " }}<br />
+    {% endfor %}
     {{ block.super }}
 {% endblock %}
