bug create course

--- a/inscriptions/templates/closed.html
+++ b/inscriptions/templates/closed.html
@@ -8,8 +8,8 @@
         </div>
         <div class="media-body">
             <h2>{% trans "Le site d'inscription est fermé." %}</h2>
-            <p>{% trans "S'il vous manque encore des certificats, ammenez les le jour de la course." %}</p>
-            <p>{% trans "Si vous n'avez pas encore payé, ammenez votre chèque le jour de la course." %}</p>
+            <p>{% trans "S'il vous manque encore des certificats, amenez les le jour de la course." %}</p>
+            <p>{% trans "Si vous n'avez pas encore payé, amenez votre chèque le jour de la course." %}</p>
         </div>
     </div>
 </div>
