--- a/inscriptions/templates/404.html
+++ b/inscriptions/templates/404.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "site_base.html" %}
+{% block body %}
 404 - Page not found
 {% endblock %}
