--- a/inscriptions/templates/list.html
+++ b/inscriptions/templates/list.html
@@ -8,7 +8,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">Inscrits</div>
         <div class="panel-body">
-            <table>
+            <table class="list_inscrits">
                 <tr>
                     <th>#</th>
                     <th>Nom</th>
