--- a/inscriptions/templates/listing.html
+++ b/inscriptions/templates/listing.html
@@ -22,7 +22,7 @@
 {% for e in equipes %}
 {% if forloop.counter0|divisibleby:"30" %}
 {% if not forloop.first %}<div style="page-break-before: always"></div>{% endif %}
-<img style="float: right; height: 3cm; width: 3cm; " src="http://www.6hdeparis.fr/wp-content/uploads/2013/03/logo-6h-paris-small.png" />
+<div style="float: right; height: 3cm; width: 3cm; background: url({{ MEDIA_URL }}{{ course.logo }}) no-repeat 50% 50%; background-size: contain;"></div>
 <h1>Liste des inscrits</h1>
 <h2>Trié par {{ order }}</h2>
 <table>
