--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -21,3 +21,10 @@
     display: flex;
     flex: 0 0 auto;
 }
+
+.list_inscrits {
+    width: 100%;
+}
+.list_inscrits tr:nth-child(odd) {
+    background: #f5f5f5;
+}
